Source/WebCore/rendering/svg/RenderSVGResource.h
@@ -82,9 +82,6 @@ public:
     static RenderSVGResourceSolidColor* sharedSolidPaintingResource();
 
     static void markForLayoutAndParentResourceInvalidation(RenderObject*, bool needsLayout = true);
-
-private:
-    static void removeFromFilterCache(RenderObject*);
 };
 
 }
